Revision history for {{$dist->name}}

Uses the change tracking convention
+ New feature.
- Removed/deprecated feature.
! Bug fix.
* Place holder

NOTE: This software is designated as beta quality until this notice is removed.  The goal is to 
be used for Spreadsheet::Reader::ExcelXML and adjusted to work with Spreadsheet::ParseExcel prior 
to the 1.0 release.

{{$NEXT}}

	* Another cool change

v0.2.6    2016-04-02 21:45:26-07:00 America/Los_Angeles

	! Attempt to fix coveralls testing

v0.2.4    2016-04-02 21:11:28-07:00 America/Los_Angeles

	! Fixed the coveralls and travis-ci badges

v0.2.2    2016-04-02 21:04:02-07:00 America/Los_Angeles

	! Fixed the github badge

v0.2.0    2016-04-02 20:49:52-07:00 America/Los_Angeles

	+ Added the badges

v0.1_3    2016-04-02 20:39:46-07:00 America/Los_Angeles (TRIAL RELEASE)

	! Turn on AutoPrereqs for Dist::Zilla to get all the pre-reqs

v0.1_1    2016-04-02 20:30:23-07:00 America/Los_Angeles (TRIAL RELEASE)
	
	+ Initial release to move the formatter out of Spreadsheet::XLSX::Reader::LibXML