@@ -56,19 +56,19 @@
    "provides" : {
       "Spreadsheet::Reader::Format" : {
          "file" : "lib/Spreadsheet/Reader/Format.pm",
-         "version" : "v0.2.6"
+         "version" : "v0.2.8"
       },
       "Spreadsheet::Reader::Format::FmtDefault" : {
          "file" : "lib/Spreadsheet/Reader/Format/FmtDefault.pm",
-         "version" : "v0.2.6"
+         "version" : "v0.2.8"
       },
       "Spreadsheet::Reader::Format::ParseExcelFormatStrings" : {
          "file" : "lib/Spreadsheet/Reader/Format/ParseExcelFormatStrings.pm",
-         "version" : "v0.2.6"
+         "version" : "v0.2.8"
       },
       "Spreadsheet::Reader::Format::Types" : {
          "file" : "lib/Spreadsheet/Reader/Format/Types.pm",
-         "version" : "v0.2.6"
+         "version" : "v0.2.8"
       }
    },
    "release_status" : "stable",
@@ -83,7 +83,7 @@
          "web" : "https://github.com/jandrew/p5-spreadsheet-reader-format"
       }
    },
-   "version" : "v0.2.6",
+   "version" : "v0.2.8",
    "x_authority" : "cpan:JANDREW"
 }
 
